{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "1fc78604-6124-4e2f-8fe4-25e6c9d19d68",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cb4b5f4c-9727-474a-9499-98dd09d66208",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalMove",
                    "type": "Value",
                    "id": "e8984288-b226-4c6d-a235-eb6538da32c7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "81a4f946-8807-458e-840f-a12455f52181",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeTimeSlider",
                    "type": "Value",
                    "id": "1e5bf7c0-260d-4a36-a3e4-8e2a08feae41",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetDay",
                    "type": "Value",
                    "id": "95a1d118-5969-49a1-945d-173e60b050e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetDusk",
                    "type": "Value",
                    "id": "fb960081-5d7b-4945-a4e5-0e541853f1d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetNight",
                    "type": "Value",
                    "id": "aa18ba89-ab9c-419e-b0b9-feabf02df98b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SliderToggle",
                    "type": "Value",
                    "id": "640ce7a5-13a4-46f0-9eef-2512f192106b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpawnCar",
                    "type": "Button",
                    "id": "0795b168-c284-4eec-a769-fb5b29611bdc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireButton",
                    "type": "Button",
                    "id": "1e6508d6-7151-4d05-956d-58330beeea90",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchView",
                    "type": "Button",
                    "id": "3b745aef-d0f8-4f93-88ec-b3e746712209",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "48feb521-a339-4692-919d-6711891c731d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3e757222-696f-42cc-8dc9-59a6295cfb71",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "25a8b0c7-3fc5-4038-9174-89a9006c9ded",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "10b5db65-64f2-422c-bb61-e49fca5be5dc",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5708c805-d9d6-4d8e-af30-7c9e01c3c859",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "27ff584b-0e4a-4bab-869a-dcc868cfa0f4",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e2c1e08-55e1-48a9-a1b8-36b139334715",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f0dcb60-3839-4c5d-a80e-a95b9be22fa9",
                    "path": "<MidiDevice>/control064",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af056998-0170-4674-ad42-c93238797646",
                    "path": "<MidiDevice>/control048",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDusk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a923d331-2a90-4855-a5e6-a8941d9d3cca",
                    "path": "<MidiDevice>/control032",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetNight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afd2ac35-ba54-4494-8956-7e44f38ea565",
                    "path": "<MidiDevice>/control000",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeTimeSlider",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c67cc7b0-afb4-4747-9f6e-8c892a69c0e3",
                    "path": "<MidiDevice>/control016",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SliderToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7293d067-efdc-47ad-917f-fa6139910687",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnCar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a46a519-366a-4979-b3ea-5f8e9c7d9741",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57e5beee-91f6-42f6-a24f-3768b18574ac",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}